trying joao pedro approach on talking data

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,58 +53,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remove outliers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from collections import Counter\n",
-    "\n",
-    "# # Outlier detection curtesy of Yassine who in turn was motivated by the Tukey method\n",
-    "# def detect_outliers(df, n, features):\n",
-    "#     \"\"\"\n",
-    "#     Takes a dataframe df of features and returns a list of the indices\n",
-    "#     corresponding to the observations containing more than n outliers according\n",
-    "#     to the Tukey method.\n",
-    "#     \"\"\"\n",
-    "#     outlier_indices = []\n",
-    "    \n",
-    "#     # iterate over features(columns)\n",
-    "#     for col in features:\n",
-    "#         Q1 = np.percentile(df[col], 25) # 1st quartile (25%)\n",
-    "#         Q3 = np.percentile(df[col],75)  # 3rd quartile (75%)\n",
-    "#         IQR = Q3 - Q1                   # Interquartile range (IQR)\n",
-    "    \n",
-    "#         outlier_step = 1.5 * IQR\n",
-    "#         outlier_list_col = df[(df[col] < Q1 - outlier_step) | (df[col] > Q3 + outlier_step )].index\n",
-    "#         outlier_indices.extend(outlier_list_col)\n",
-    "        \n",
-    "#     # select observations containing more than 2 outliers\n",
-    "#     outlier_indices = Counter(outlier_indices)        \n",
-    "#     multiple_outliers = list( k for k, v in outlier_indices.items() if v > n )\n",
-    "    \n",
-    "#     return multiple_outliers   \n",
-    "\n",
-    "# # detect outliers from Age, SibSp , Parch and Fare\n",
-    "# outliers_to_drop = detect_outliers(train, 2, [\"Age\",\"SibSp\",\"Parch\",\"Fare\"])\n",
-    "\n",
-    "# train = train.drop(outliers_to_drop, axis = 0).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Concat train and test data for easier manipulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -156,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -235,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Apply log to Fare to reduce skewness distribution\n",
-    "full[\"Fare\"] = full[\"Fare\"].map(lambda i: np.log(i) if i > 0 else 0)"
+    "# full[\"Fare\"] = full[\"Fare\"].map(lambda i: np.log(i) if i > 0 else 0)"
    ]
   },
   {
@@ -254,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -304,7 +258,7 @@
        "      <td>22.0</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>1.981001</td>\n",
+       "      <td>7.2500</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -323,7 +277,7 @@
        "      <td>38.0</td>\n",
        "      <td>C</td>\n",
        "      <td>C</td>\n",
-       "      <td>4.266662</td>\n",
+       "      <td>71.2833</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -342,7 +296,7 @@
        "      <td>26.0</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>2.070022</td>\n",
+       "      <td>7.9250</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -361,7 +315,7 @@
        "      <td>35.0</td>\n",
        "      <td>C</td>\n",
        "      <td>S</td>\n",
-       "      <td>3.972177</td>\n",
+       "      <td>53.1000</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
@@ -380,7 +334,7 @@
        "      <td>35.0</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>2.085672</td>\n",
+       "      <td>8.0500</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -399,12 +353,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    Age Cabin Embarked      Fare  Parch  PassengerId  Pclass     Sex  SibSp  \\\n",
-       "0  22.0  None        S  1.981001      0            1       3    male      1   \n",
-       "1  38.0     C        C  4.266662      0            2       1  female      1   \n",
-       "2  26.0  None        S  2.070022      0            3       3  female      0   \n",
-       "3  35.0     C        S  3.972177      0            4       1  female      1   \n",
-       "4  35.0  None        S  2.085672      0            5       3    male      0   \n",
+       "    Age Cabin Embarked     Fare  Parch  PassengerId  Pclass     Sex  SibSp  \\\n",
+       "0  22.0  None        S   7.2500      0            1       3    male      1   \n",
+       "1  38.0     C        C  71.2833      0            2       1  female      1   \n",
+       "2  26.0  None        S   7.9250      0            3       3  female      0   \n",
+       "3  35.0     C        S  53.1000      0            4       1  female      1   \n",
+       "4  35.0  None        S   8.0500      0            5       3    male      0   \n",
        "\n",
        "   Survived  Title  Fsize  Single  SmallF  MedF  LargeF  \n",
        "0       0.0      0      2       0       1     0       0  \n",
@@ -414,7 +368,7 @@
        "4       0.0      0      1       1       0     0       0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -463,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -490,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -585,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -599,17 +553,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done 816 tasks      | elapsed:    3.0s\n",
-      "[Parallel(n_jobs=4)]: Done 1120 out of 1120 | elapsed:    3.9s finished\n"
+      "[Parallel(n_jobs=4)]: Done 868 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=4)]: Done 1120 out of 1120 | elapsed:    4.9s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7991021324354658"
+       "0.80359147025813693"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -657,19 +611,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    6.2s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   26.6s\n",
-      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.1min\n",
-      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.4min finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    7.0s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   33.8s\n",
+      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.3min\n",
+      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.6min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83164983164983164"
+       "0.83277216610549942"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -721,19 +675,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    6.8s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   30.7s\n",
-      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.3min\n",
-      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.6min finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    7.5s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   34.1s\n",
+      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.4min\n",
+      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.8min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83277216610549942"
+       "0.83501683501683499"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -784,18 +738,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  76 tasks      | elapsed:    3.2s\n",
-      "[Parallel(n_jobs=4)]: Done 376 tasks      | elapsed:   15.4s\n",
-      "[Parallel(n_jobs=4)]: Done 720 out of 720 | elapsed:   29.4s finished\n"
+      "[Parallel(n_jobs=4)]: Done  76 tasks      | elapsed:    3.6s\n",
+      "[Parallel(n_jobs=4)]: Done 376 tasks      | elapsed:   19.3s\n",
+      "[Parallel(n_jobs=4)]: Done 720 out of 720 | elapsed:   34.8s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83726150392817056"
+       "0.83164983164983164"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -843,18 +797,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   12.1s\n",
-      "[Parallel(n_jobs=4)]: Done 280 out of 280 | elapsed:   24.7s finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    2.0s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   12.8s\n",
+      "[Parallel(n_jobs=4)]: Done 280 out of 280 | elapsed:   25.8s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83277216610549942"
+       "0.83052749719416386"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -938,7 +892,7 @@
     "                            \"Survived\": predictions\n",
     "                            })\n",
     "\n",
-    "predictions.to_csv(\"../../submissions/titanic_svc.csv\",index=False)"
+    "predictions.to_csv(\"../../submissions/titanic_svc_2.csv\",index=False)"
    ]
   },
   {
