done with talking data too much data

--- a/in_progress/talking_data/test_joao.ipynb
+++ b/in_progress/talking_data/test_joao.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[93.44311809539795] Finished to load data\n"
+      "[68.96785998344421] Finished to load data\n"
      ]
     }
    ],
@@ -73,6 +73,8 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "train_columns = ['ip', 'app', 'device', 'os', 'channel', 'click_time', 'is_attributed']\n",
+    "test_columns  = ['ip', 'app', 'device', 'os', 'channel', 'click_time', 'click_id']\n",
     "dtypes = {\n",
     "        'ip'            : 'uint32',\n",
     "        'app'           : 'uint16',\n",
@@ -84,22 +86,22 @@
     "        }\n",
     "\n",
     "# Read the last lines because they are more impacting in training than the starting lines\n",
-    "train = pd.read_csv(path+\"train_r.csv\", nrows=61000000, dtype=dtypes)\n",
-    "test = pd.read_csv(path+\"test.csv\", dtype=dtypes)\n",
+    "train = pd.read_csv(path+\"train_r.csv\", nrows=61000000, usecols=train_columns, dtype=dtypes)\n",
+    "test = pd.read_csv(path+\"test.csv\", usecols=test_columns, dtype=dtypes)\n",
     "\n",
     "print('[{}] Finished to load data'.format(time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17.41667604446411] Time to finish\n"
+      "[7.689590215682983] Time to finish\n"
      ]
     }
    ],
@@ -127,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[98.0048279762268] Time to finish\n"
+      "[52.44953012466431] Time to finish\n"
      ]
     }
    ],
@@ -159,11 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30.475963830947876] Time to finish\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -175,12 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-auc:0.959572\n",
+      "[1]\ttrain-auc:0.962121\n",
+      "[2]\ttrain-auc:0.962985\n",
+      "[3]\ttrain-auc:0.962546\n",
+      "[4]\ttrain-auc:0.964779\n",
+      "[471.81199073791504] Finish XGBoost Training\n"
+     ]
+    }
+   ],
    "source": [
+    "start_time = time.time()\n",
+    "\n",
     "# Set the params(this params from Pranav kernel) for xgboost model\n",
     "params = {'eta': 0.3,\n",
     "          'tree_method': \"hist\",\n",
@@ -215,7 +236,7 @@
     "    del train, y\n",
     "    gc.collect()\n",
     "    watchlist = [(dtrain, 'train')]\n",
-    "    model = xgb.train(params, dtrain, 30, watchlist, maximize=True, verbose_eval=1)\n",
+    "    model = xgb.train(params, dtrain, 5, watchlist, maximize=True, verbose_eval=1)\n",
     "\n",
     "del dtrain\n",
     "gc.collect()\n",
@@ -225,19 +246,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1101ab198>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Plot the feature importance from xgboost\n",
-    "plot_importance(model)"
+    "_ = plot_importance(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -254,11 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test['clicks_by_ip'] = test['clicks_by_ip'].astype('uint16')\n",
     "test = timeFeatures(test)\n",
@@ -270,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -278,7 +317,7 @@
    "source": [
     "# Save the predictions\n",
     "sub['is_attributed'] = model.predict(dtest, ntree_limit=model.best_ntree_limit)\n",
-    "sub.to_csv('../../sub/joan_xgb.csv', float_format='%.8f', index=False)"
+    "sub.to_csv('../../submissions/joan_xgb.csv', float_format='%.8f', index=False)"
    ]
   },
   {
