--- a/in_progress/santa/submission.ipynb
+++ b/in_progress/santa/submission.ipynb
@@ -175,7 +175,7 @@
      "text": [
       "  1%|          | 3/500 [00:09<26:09,  3.16s/it]/anaconda3/lib/python3.6/site-packages/tqdm/_monitor.py:89: TqdmSynchronisationWarning: Set changed size during iteration (see https://github.com/tqdm/tqdm/issues/481)\n",
       "  TqdmSynchronisationWarning)\n",
-      " 59%|█████▉    | 294/500 [20:38<14:27,  4.21s/it]"
+      "100%|██████████| 500/500 [43:08<00:00,  5.18s/it]\n"
      ]
     }
    ],
@@ -190,6 +190,17 @@
     "    anh = my_avg_normalized_happiness(subm[['ChildId', 'GiftId']].values.tolist())\n",
     "    end_time = dt.datetime.now()\n",
     "    print(i, anh, (end_time-start_time).total_seconds())\n",
+    "subm[['ChildId', 'GiftId']].to_csv('./submission_%i.csv' % int(anh * 10 ** 6), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "subm[['ChildId', 'GiftId']].to_csv('./submission_%i.csv' % int(anh * 10 ** 6), index=False)"
    ]
   },
