removed ada from titanic project

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -532,66 +532,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# META MODELING\n",
+    "# Modeling\n",
     "\n",
-    "### Adaboost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 10 folds for each of 112 candidates, totalling 1120 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done 868 tasks      | elapsed:    4.1s\n",
-      "[Parallel(n_jobs=4)]: Done 1120 out of 1120 | elapsed:    4.9s finished\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.80359147025813693"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DTC = DecisionTreeClassifier()\n",
-    "\n",
-    "adaDTC = AdaBoostClassifier(DTC, random_state=7)\n",
-    "\n",
-    "ada_param_grid = {\"base_estimator__criterion\" : [\"gini\", \"entropy\"],\n",
-    "              \"base_estimator__splitter\" :   [\"best\", \"random\"],\n",
-    "              \"algorithm\" : [\"SAMME\",\"SAMME.R\"],\n",
-    "              \"n_estimators\" :[1,2],\n",
-    "              \"learning_rate\":  [0.0001, 0.001, 0.01, 0.1, 0.2, 0.3,1.5]}\n",
-    "\n",
-    "gsadaDTC = GridSearchCV(adaDTC,param_grid = ada_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
-    "\n",
-    "gsadaDTC.fit(train_x, train_y)\n",
-    "\n",
-    "ada_best = gsadaDTC.best_estimator_\n",
-    "\n",
-    "gsadaDTC.best_score_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### ExtraTrees "
    ]
   },
@@ -839,13 +781,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_Survived_RFC  = pd.Series(RFC_best.predict( test_x), name=\"RFC\")\n",
     "test_Survived_ExtC = pd.Series(ExtC_best.predict(test_x), name=\"ExtC\")\n",
     "test_Survived_SVMC = pd.Series(SVMC_best.predict(test_x), name=\"SVC\")\n",
-    "test_Survived_AdaC = pd.Series(ada_best.predict( test_x), name=\"Ada\")\n",
     "test_Survived_GBC  = pd.Series(GBC_best.predict( test_x), name=\"GBC\")\n",
     "\n",
     "\n",
@@ -853,13 +796,12 @@
     "ensemble_results = pd.concat([\n",
     "                                test_Survived_RFC,\n",
     "                                test_Survived_ExtC,\n",
-    "                                test_Survived_AdaC,\n",
     "                                test_Survived_GBC,\n",
     "                                test_Survived_SVMC\n",
     "                             ],axis=1)\n",
     "\n",
     "votingC = VotingClassifier(estimators=[('rfc', RFC_best), ('extc', ExtC_best),\n",
-    "('svc', SVMC_best), ('adac',ada_best),('gbc',GBC_best)], voting='soft', n_jobs=4)\n",
+    "('svc', SVMC_best),('gbc',GBC_best)], voting='soft', n_jobs=4)\n",
     "\n",
     "votingC = votingC.fit(train_x, train_y)"
    ]
@@ -881,11 +823,11 @@
    },
    "outputs": [],
    "source": [
-    "# predictions = votingC.predict(test_x)\n",
+    "predictions = votingC.predict(test_x)\n",
     "\n",
-    "pipeline = make_pipeline(Imputer(), SVC())\n",
-    "pipeline.fit(train_x, train_y)\n",
-    "predictions = pipeline.predict(test_x)\n",
+    "# pipeline = make_pipeline(Imputer(), SVC())\n",
+    "# pipeline.fit(train_x, train_y)\n",
+    "# predictions = pipeline.predict(test_x)\n",
     "\n",
     "predictions = pd.DataFrame({\n",
     "                            \"PassengerId\": test.PassengerId,\n",
@@ -901,7 +843,7 @@
    "source": [
     "# Extra\n",
     "\n",
-    "Taken from Yassine's code.  I think these plots are very interesting\n",
+    "Taken from Yassine's code.  I think these plots are very interesting although not too useful, my best result was with plain SVC and no stacking.\n",
     "\n",
     "### Plot learning curves"
    ]
@@ -996,7 +938,6 @@
     "g = plot_learning_curve( gsRFC.best_estimator_,   \"RF mearning curves\",               train_x, train_y, cv=kfold )\n",
     "g = plot_learning_curve( gsExtC.best_estimator_,  \"ExtraTrees learning curves\",       train_x, train_y, cv=kfold )\n",
     "g = plot_learning_curve( gsSVMC.best_estimator_,  \"SVC learning curves\",              train_x, train_y, cv=kfold )\n",
-    "g = plot_learning_curve( gsadaDTC.best_estimator_,\"AdaBoost learning curves\",         train_x, train_y, cv=kfold )\n",
     "g = plot_learning_curve( gsGBC.best_estimator_,   \"GradientBoosting learning curves\", train_x, train_y, cv=kfold )"
    ]
   },
