starting amazon employee competition

--- a/complete/house_prices/13_.ipynb
+++ b/complete/house_prices/13_.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -94,31 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Fill empty values with None\n",
     "for col in ('MiscFeature', 'PoolQC', 'Alley', 'Fence', 'FireplaceQu', 'GarageType', 'GarageFinish', \n",
     "            'GarageQual', 'GarageCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2',\n",
     "           'MasVnrType', 'MSSubClass'):\n",
-    "    all_data[col] = all_data[col].fillna(\"None\")\n",
+    "    full[col] = full[col].fillna(\"None\")\n",
     "\n",
     "# Fill empty values with 0\n",
     "for col in ('BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF','TotalBsmtSF', 'BsmtFullBath', 'BsmtHalfBath',\n",
     "           'GarageYrBlt', 'GarageArea', 'GarageCars', 'MasVnrArea'):\n",
-    "    all_data[col] = all_data[col].fillna(0)\n",
+    "    full[col] = full[col].fillna(0)\n",
     "    \n",
     "#Group by neighborhood and fill in missing value by the median LotFrontage of all the neighborhood\n",
-    "all_data[\"LotFrontage\"] = all_data.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
+    "full[\"LotFrontage\"] = full.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
     "    lambda x: x.fillna(x.median()))\n",
     "\n",
     "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
-    "    all_data[col] = all_data[col].fillna(all_data[col].mode()[0])\n",
+    "    full[col] = full[col].fillna(full[col].mode()[0])\n",
     "    \n",
-    "all_data[\"Functional\"] = all_data[\"Functional\"].fillna(\"Typ\")"
+    "full[\"Functional\"] = full[\"Functional\"].fillna(\"Typ\")"
    ]
   },
   {
@@ -130,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "all_data = all_data.drop(['Utilities'], axis=1)"
+    "full = full.drop(['Utilities'], axis=1)"
    ]
   },
   {
@@ -148,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
-    "    all_data[col] = all_data[col].apply(str)"
+    "    full[col] = full[col].apply(str)"
    ]
   },
   {
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -183,8 +181,8 @@
     "\n",
     "for col in categorical_cols:\n",
     "    lbl = LabelEncoder() \n",
-    "    lbl.fit(list(all_data[col].values)) \n",
-    "    all_data[col] = lbl.transform(list(all_data[col].values))"
+    "    lbl.fit(list(full[col].values)) \n",
+    "    full[col] = lbl.transform(list(full[col].values))"
    ]
   },
   {
@@ -196,13 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "all_data['TotalSF'] = all_data['TotalBsmtSF'] + all_data['1stFlrSF'] + all_data['2ndFlrSF']"
+    "full['TotalSF'] = full['TotalBsmtSF'] + full['1stFlrSF'] + full['2ndFlrSF']"
    ]
   },
   {
@@ -216,115 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Skew in numerical features: \n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Skew</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>MiscVal</th>\n",
-       "      <td>21.940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PoolArea</th>\n",
-       "      <td>17.689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LotArea</th>\n",
-       "      <td>13.109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LowQualFinSF</th>\n",
-       "      <td>12.085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3SsnPorch</th>\n",
-       "      <td>11.372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LandSlope</th>\n",
-       "      <td>4.973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KitchenAbvGr</th>\n",
-       "      <td>4.301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BsmtFinSF2</th>\n",
-       "      <td>4.145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EnclosedPorch</th>\n",
-       "      <td>4.002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ScreenPorch</th>\n",
-       "      <td>3.945</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Skew\n",
-       "MiscVal       21.940\n",
-       "PoolArea      17.689\n",
-       "LotArea       13.109\n",
-       "LowQualFinSF  12.085\n",
-       "3SsnPorch     11.372\n",
-       "LandSlope      4.973\n",
-       "KitchenAbvGr   4.301\n",
-       "BsmtFinSF2     4.145\n",
-       "EnclosedPorch  4.002\n",
-       "ScreenPorch    3.945"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.special import boxcox1p\n",
     "from scipy import stats\n",
     "from scipy.stats import norm, skew\n",
     "\n",
-    "numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
+    "numeric_feats = full.dtypes[full.dtypes != \"object\"].index\n",
     "\n",
     "# Check the skew of all numerical features\n",
-    "skewed_feats = all_data[numeric_feats].apply(lambda x: skew(x.dropna())).sort_values(ascending=False)\n",
+    "skewed_feats = full[numeric_feats].apply(lambda x: skew(x.dropna())).sort_values(ascending=False)\n",
     "\n",
     "skewness = pd.DataFrame({'Skew' :skewed_feats})\n",
     "skewness = skewness[abs(skewness) > 0.75]\n",
@@ -333,7 +234,7 @@
     "lam = 0.15\n",
     "\n",
     "for feat in skewed_features:\n",
-    "    all_data[feat] = boxcox1p(all_data[feat], lam)"
+    "    full[feat] = boxcox1p(full[feat], lam)"
    ]
   },
   {
@@ -345,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "all_data = pd.get_dummies(all_data)"
+    "full = pd.get_dummies(full)"
    ]
   },
   {
@@ -363,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "train = all_data[:train_N]\n",
-    "test = all_data[train_N:]"
+    "train = full[:train_N]\n",
+    "test = full[train_N:]"
    ]
   },
   {
@@ -382,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -409,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -417,8 +318,9 @@
    "source": [
     "kf = KFold(5, shuffle=True, random_state=42).get_n_splits(train.values)\n",
     "\n",
-    "def cvs(model):\n",
-    "    return cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv=kf)\n",
+    "def rmsle_cv(model):\n",
+    "    rmse= np.sqrt(-cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv = kf))\n",
+    "    return(rmse)\n",
     "\n",
     "def rms(y, y_pred):\n",
     "    return np.sqrt(mean_squared_error(y, y_pred))"
@@ -435,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -476,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -527,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +444,7 @@
     "stacked_averaged_models = StackingAveragedModels(base_models = (ENet, GBoost, KRR),\n",
     "                                                 meta_model = lasso)\n",
     "\n",
-    "score = csv(stacked_averaged_models)\n",
+    "score = rmsle_cv(stacked_averaged_models)\n",
     "print(\"Stacking Averaged models score: {:.4f} ({:.4f})\".format(score.mean(), score.std()))"
    ]
   },
@@ -579,7 +481,7 @@
     "stacked_pred = stacked_averaged_models.predict(test.values)\n",
     "stacked_pred = np.expm1(stacked_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
     "\n",
-    "print(rms(train_y, stacked_train_pred))"
+    "print(rmsle_cv(train_y, stacked_train_pred))"
    ]
   },
   {
@@ -613,7 +515,7 @@
     "xgb_pred = model_xgb.predict(test)\n",
     "xgb_pred = np.expm1(xgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
     "\n",
-    "print(rms(y_train, xgb_train_pred))"
+    "print(rmsle_cv(y_train, xgb_train_pred))"
    ]
   },
   {
@@ -647,7 +549,7 @@
     "lgb_pred = model_lgb.predict(test.values)\n",
     "lgb_pred = np.expm1(lgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
     "\n",
-    "print(rms(y_train, lgb_train_pred))"
+    "print(rmsle_cv(y_train, lgb_train_pred))"
    ]
   },
   {
