added missing values to house analysis

--- a/complete/house_prices/13_.ipynb
+++ b/complete/house_prices/13_.ipynb
@@ -61,7 +61,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial preprocessing and merging data"
+    "### Initial preprocessing and merging data\n",
+    "\n",
+    "Removing outliers were determined by an excerpt from the dataset auther\n",
+    "\n",
+    "    \" Although all known errors were corrected in the data, no observations have been removed due to unusual values  and all final residential sales from the initial data set are included in the data presented with this article. There are five observations that an instructor may wish to remove from the data set before giving it to students (a plot of SALE PRICE versus GR LIV AREA will quickly indicate these points). Three of them are true outliers (Partial Sales that likely don’t represent actual market values) and two of them are simply unusual sales (very large houses priced relatively appropriately). I would recommend removing any houses with more than 4000 square feet from the data set (which eliminates these five unusual observations) before assigning it to students. \""
    ]
   },
   {
@@ -73,7 +77,7 @@
    "outputs": [],
    "source": [
     "# remove outliers (see analysis notebook)\n",
-    "train = train.drop(train[(train['GrLivArea']>4000) & (train['SalePrice']<300000)].index)\n",
+    "train = train.drop(train[(train['GrLivArea']>4000)].index)\n",
     "\n",
     "# applies log(1+x) to all elements of the column\n",
     "train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
@@ -95,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Fill empty values with None\n",
@@ -215,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.special import boxcox1p\n",
